--- a/index.html
+++ b/index.html
@@ -103,19 +103,52 @@
         </div>
       </div>
 
-      <div id="features" class="w-full h-[600px] flex-col space-y-10 p-10">
-        <div>
+      <div id="features" class="w-full h-[800px] flex-col space-y-10 p-10">
+        <div class="w-full h-[350px] flex-col space-y-8">
           <div class="flex justify-start">
             <span class="text-3xl font-semibold" style="font-family: 'Kanit';">Powerful Bass</span>
           </div>
+
+          <div class="flex justify-between">
+            <p class="w-2/4 text-lg leading-tight font-semibold text-zinc-500">Hover provides premium audio experience. This powerful speaker brings out all the thump and rumble in your favorite tunes so you can party in the comfort of your home. Bass lovers can take advantage of all the extra customization tools available, too, including a Bass Boost feature to pump up the boom and a more traditional graphic EQ to switch up its sound across the range.</p>
+            <div class="relative">
+              <div class="w-[250px] h-[250px] bg-black flex justify-center items-center rounded-full p-2">
+                <img src="/static/img/Powerfull-Bass.jpeg" alt="Powerfull-Bass" class="rounded-full w-[240px] h-[240px]">
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div>
+        <div class="w-full h-[350px] flex-col space-y-8">
           <div class="flex justify-end">
             <span class="text-3xl font-semibold" style="font-family: 'Kanit';">Amazing Experience</span>
           </div>
+          
+          <div class="flex justify-between">
+            <div class="relative">
+              <div class="w-[250px] h-[250px] bg-black flex justify-center items-center rounded-full p-2">
+                <img src="/static/img/Amazing-Experience.jpeg" alt="Amazing-Experience" class="rounded-full w-[240px] h-[240px]">
+              </div>
+            </div>
+            <p class="w-2/4 text-lg leading-tight font-semibold text-zinc-500 text-right">Hover provides premium audio experience. This powerful speaker brings out all the thump and rumble in your favorite tunes so you can party in the comfort of your home. Bass lovers can take advantage of all the extra customization tools available, too, including a Bass Boost feature to pump up the boom and a more traditional graphic EQ to switch up its sound across the range.</p>
+          </div>
         </div>
       </div>
+
+      <div id="delivery" class="w-full h-[500px] flex justify-evenly">
+        <div class="w-1/2 h-full flex-col space-y-2 pt-20 pl-10 font-semibold">
+          <p class="uppercase text-black text-4xl italic">24 Hours Service</p>
+          <p class="text-black text-4xl italic tracking-wider">Fast Delivery</p>
+          <p class="text-black text-xl italic tracking-wide pt-10">Enjoy the best of both the worlds!</p>
+          <p class="text-black text-xl italic tracking-wide">FREE & FAST DELIVERY.</p>
+        </div>
+
+        <div class="w-1/2 h-full ">
+          <img src="/static/img/Express-delivery.png" alt="boat earbuds image" class="">
+        </div>
+      </div>
+
+      <div id="footer" class="w-full h-[200px] bg-black"></div>
     </div>
   </body>
 </html>
