--- a/index.html
+++ b/index.html
@@ -148,7 +148,15 @@
         </div>
       </div>
 
-      <div id="footer" class="w-full h-[200px] bg-black"></div>
+      <div id="footer" class="w-full h-[200px] bg-black flex justify-between p-4">
+        <div class="w-1/3 h-full">
+          <div class="w-full h-full flex justify-center items-center">
+            <span class="text-white text-3xl font-semibold" style="font-family: 'Kanit';">H<span class="uppercase text-2xl">over</span></span>
+          </div>
+        </div>
+        <div class="w-1/3 h-full border-2 border-r-white"></div>
+        <div class="w-1/3 h-full border-2 border-r-white"></div>
+      </div>
     </div>
   </body>
 </html>
